image upload works

--- a/src/app/menu-overview/menu-group-dish-detail/menu-group-dish-detail.component.html
+++ b/src/app/menu-overview/menu-group-dish-detail/menu-group-dish-detail.component.html
@@ -1,3 +1,72 @@
 <p>
   menu-group-dish-detail works!
 </p>
+
+
+<!-- <input type="file" ng2FileSelect [uploader]="uploader"/> -->
+
+
+
+
+
+
+
+
+<input type="file" ng2FileSelect [uploader]="uploader" accept="image/*;capture=camera">
+
+<button (click)="upload()">Upload</button>
+
+<cl-image [public-id]="imageId" [cloud-name]="uploader.cloudName"></cl-image>
+
+
+
+
+
+
+
+
+
+
+<!-- // Edit menu
+ <div class="card">
+      <img src="http://drewcodespot.com/wp-content/uploads/2015/02/uploadbtn.jpg" id="img-preview" />
+      <label class="file-upload-container" for="file-upload">
+        <input id="file-upload" type="file" style="display:none;">
+        Select an Image
+      </label>
+    </div>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="/public/scripts/app.js"></script>
+
+<script type="text/javascript">
+var imgPreview= document.getElementById("img-preview");
+var fileUpload= document.getElementById("file-upload");
+
+var curl= "	https://api.cloudinary.com/v1_1/nishit/upload";
+var cpreset= "kkzbmykl";
+
+fileUpload.addEventListener('change', function(event){
+	console.log(event);
+	var file= event.target.files[0];
+	var formData=new FormData;
+	formData.append('file', file);
+	formData.append('upload_preset', cpreset);
+
+	axios({
+		url: curl,
+		method: 'POST',
+		headers:{
+			'Content-Type': 'application/xwww-form-urlencoded'
+		},
+		data: formData
+	}).then(function(res){
+		console.log(res);
+		imgPreview.src= res.data.secure_url;
+
+	}).catch(function(err){
+		console.error(err);
+	});
+});
+</script>
+
+ --> 
